# xlsform2lstsv

./: .gitignore  AI_DISCLOSURE.md  CHANGELOG.md  COMPATIBILITY_TESTING.md  LICENSE  LimeSurveyDatabaseConstraints.md  LimeSurveyTsvImportCodeSummary.md  README.md  RELEASING.md  VERSION_MANAGEMENT.md  clean_xpath_converter.py  commitlint.config.cjs  debug_answer_codes.py  debug_multilanguage.py  eslint.config.cjs  package-lock.json  package.json  test_multilanguage_export_validation.py  test_updated_choice_counting.py  tsconfig.json
.github/workflows/: ci.yml
.husky/: pre-commit
docker_tests/fixtures/: .~lock.all_types_survey.xlsx#  all_types_survey.xlsx  complex_survey.json  (+5 more)
docker_tests/integration/: docker-compose.yml  pyproject.toml  test_all_types.py  test_basic_functionality.py  test_conversion_settings.py  test_multilingual_functionality.py  test_multipage_survey.py  test_survey_structure.py  test_xlsx_surveys.py
docker_tests/integration/output/: all_types_survey.tsv  basic_survey.tsv  complex_survey.tsv  complex_xpath_survey.tsv  multilingual_survey.tsv  multipage_survey.tsv  settings_survey.tsv  settings_survey_disabled.tsv  testB.tsv  validation_relevance_survey.tsv
scripts/: .ts-noderc.json  CLI_README.md  check-version.ts  create_all_types_xlsx.mjs  fix-esm-imports.js  run-ts.js  sync-version.ts  test-compatibility-fast.ts  test-compatibility-safe.ts  test-compatibility.ts  update-version.ts  xlsform2lstsv.mjs
src/: generateFixtures.js  generateFixtures.ts  index.js  index.ts  relevanceConverter.ts  xlsformConverter.js  xlsformConverter.ts
(+103 files in other folders)
