[project]
name = "xlsform2lstsv-integration-tests"
version = "0.1.0"
description = "Integration tests for xlsform2lstsv with LimeSurvey"
requires-python = ">=3.9"
dependencies = [
    "pytest>=8.0.0",
    "citric>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.uv]
dev-dependencies = []
